--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,9 @@
     <string name="play">Play</string>
     <string name="stop">Stop</string>
     <string name="pause">Pause</string>
+    <string name="startLoop">start</string>
+    <string name ="endLoop">end</string>
+    <string name ="clear">clear</string>
+
 </resources>
 
